--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
                 You can follow updates and posts on Telegram here:
             </p>
             <p>
-                <a href="https://t.me/channel14" class="btn" target="_blank" rel="noopener">
-                    Open Telegram Channel @channel14
+                <a href="https://t.me/hacked_ip_pwd" class="btn" target="_blank" rel="noopener">
+                    Open Telegram Channel @hacked_ip_pwd
                 </a>
             </p>
             <p class="small-text">
